--- a/auth/package.json
+++ b/auth/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "event-reward",
+  "name": "auth",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "npm run build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start" : "npm run start",
+    "start" : "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
