feat : init-mongo 작성

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: test
-#    volumes:
+      MONGO_INITDB_DATABASE: mydb
+    volumes:
+    - ./init:/docker-entrypoint-initdb.d:ro
 #      - ./mongo_data:/data/db
 
   auth:
