--- a/event/Dockerfile
+++ b/event/Dockerfile
@@ -3,7 +3,8 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
-RUN npm ci --omit=dev
+RUN npm ci 
+# --omit=dev
 
 COPY . .
 RUN npm run build
