--- a/auth/package.json
+++ b/auth/package.json
@@ -24,7 +24,11 @@
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "bcrypt": "^6.0.0",
+    "mongoose": "^8.14.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
