--- a/event/package.json
+++ b/event/package.json
@@ -25,6 +25,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "mongoose": "^8.14.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
