feat : multi-repo로 빌드 오류 수정, gw->각 서버로 요청 정상화

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     environment:
       PORT: 3001
       MONGO_URI: mongodb://root:test@mongodb:27017/mydb?authSource=admin
+      ACCESS_SECRET: 'ACCESS_SECRET'
+      REFRESH_SECRET: 'REFRESH_SECRET'
 
   event:
     build:
